# el-atwany

./: .dockerignore  .gitignore  ATWANY.Dockerfile  Cargo.toml  Cross.toml  Dockerfile  build.rs  readme.md
.github/workflows/: workflow.yml
proto/: add_image.proto  atwany.proto
scripts/: build.sh  dockerize.sh
src/: main.rs
src/pb/: atwany.rs  mod.rs
src/service/: media.rs
src/sora/: mod.rs  sora.rs
static-server/: index.js
tasker/: Cargo.toml
tasker/src/: main.rs
